bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/CustomerToRoute__c.object-meta.xml
<CustomObject>
    <description>Junction Object</description>
    <label>Customer to Route</label>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer to Routes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>