bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Close_Hour__c.field-meta.xml
<CustomField>
    <fullName>Close_Hour__c</fullName>
    <label>Close Hour</label>
    <type>Time</type>
</CustomField>