bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Cust_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Cust_Ext_Id__c</fullName>
    <label>Customer External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>