bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Cust_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies an individual or organization that has a business relationship with PepsiCo.</description>
    <label>Customer ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer to Routes</relationshipLabel>
    <relationshipName>Customer_to_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>