bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Delivery_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_End_Time__c</fullName>
    <description>Delivery End Time</description>
    <label>Delivery End Time</label>
    <type>Time</type>
</CustomField>