bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Delivery_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Start_Time__c</fullName>
    <description>Delivery Start Time</description>
    <label>Delivery Start Time</label>
    <type>Time</type>
</CustomField>