bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description
    >Visit frequency for the store-to-route assignment. Determines which calendar weeks the store is visited.</description>
    <inlineHelpText
    >Select the visit frequency for this store. Weekly allows multiple visit days. Fortnightly, Monthly and Bi monthly frequencies allow only 1 visit day. Bi monthly frequencies visit the store once every 8 weeks. Allow multiple active routing per store and route is allowed — overlapping date ranges on the same route will be blocked; the same customer may be on multiple routes. Changing to a frequency that allows only one visit day will clear extra visit days beyond the first.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly Week 1 &amp; 3</fullName>
            </value>
            <value>
                <fullName>Fortnightly Week 2 &amp; 4</fullName>
            </value>
            <value>
                <fullName>Monthly Week 1</fullName>
            </value>
            <value>
                <fullName>Monthly Week 2</fullName>
            </value>
            <value>
                <fullName>Monthly Week 3</fullName>
            </value>
            <value>
                <fullName>Monthly Week 4</fullName>
            </value>
            <value>
                <fullName>Bi monthly week 1</fullName>
            </value>
            <value>
                <fullName>Bi monthly week 2</fullName>
            </value>
            <value>
                <fullName>Bi monthly week 3</fullName>
            </value>
            <value>
                <fullName>Bi monthly week 4</fullName>
            </value>
            <value>
                <fullName>Bi monthly week 5</fullName>
            </value>
            <value>
                <fullName>Bi monthly week 6</fullName>
            </value>
            <value>
                <fullName>Bi monthly week 7</fullName>
            </value>
            <value>
                <fullName>Bi monthly week 8</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
                <isActive>false</isActive>
                <label>Bi-weekly</label>
            </value>
            <value>
                <fullName>Every third week</fullName>
                <isActive>false</isActive>
                <label>Every third week</label>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
                <isActive>false</isActive>
                <label>Fortnightly</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <isActive>false</isActive>
                <label>Monthly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>