bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Friday_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Friday_Sequence__c</fullName>
    <description
  >Visit priority/sequence for Friday. Entering a value means the store is visited on Friday; the number defines the visit order within the route for that day. Must be unique per route.</description>
    <label>Friday Sequence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>