bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether the related route is the primary route for the customer</description>
    <label>IsPrimary</label>
    <type>Checkbox</type>
</CustomField>