bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Monday_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Monday_Sequence__c</fullName>
    <description
  >Visit priority/sequence for Monday. Entering a value means the store is visited on Monday; the number defines the visit order within the route for that day. Must be unique per route.</description>
    <label>Monday Sequence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>