bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Open_Hour__c.field-meta.xml
<CustomField>
    <fullName>Open_Hour__c</fullName>
    <label>Open Hour</label>
    <type>Time</type>
</CustomField>