bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Route_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Route_Ext_Id__c</fullName>
    <label>Route External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>