bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Route_ID__c.field-meta.xml
<CustomField>
    <fullName>Route_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Lookup to Route Sales Geo. Identifies which route this store is assigned to. Changing the route on an existing record automatically recalculates day sequences as MAX+1 on the new route.</description>
    <inlineHelpText
  >Select the route this store belongs to. Changing the route will automatically recalculate day sequences to the next available number (MAX+1) on the new route.</inlineHelpText>
    <label>Route ID ​</label>
    <referenceTo>Route_Sales_Geo__c</referenceTo>
    <relationshipLabel>Customer to Routes</relationshipLabel>
    <relationshipName>Customer_to_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>