bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Saturday_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Sequence__c</fullName>
    <description
  >Visit priority/sequence for Saturday. Entering a value means the store is visited on Saturday; the number defines the visit order within the route for that day. Must be unique per route.</description>
    <label>Saturday Sequence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>