bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Seasonal_Closed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Closed_Start_Date__c</fullName>
    <description>Seasonal Closed Start Date</description>
    <label>Seasonal Closed Start Date</label>
    <type>Date</type>
</CustomField>