bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Seasonal_Status__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seasonal Status</label>
    <type>Checkbox</type>
</CustomField>