bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Sunday_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Sequence__c</fullName>
    <description
  >Visit priority/sequence for Sunday. Entering a value means the store is visited on Sunday; the number defines the visit order within the route for that day. Must be unique per route.</description>
    <label>Sunday Sequence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>