bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Thursday_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Sequence__c</fullName>
    <description
  >Visit priority/sequence for Thursday. Entering a value means the store is visited on Thursday; the number defines the visit order within the route for that day. Must be unique per route.</description>
    <label>Thursday Sequence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>