bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Tuesday_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Sequence__c</fullName>
    <description
  >Visit priority/sequence for Tuesday. Entering a value means the store is visited on Tuesday; the number defines the visit order within the route for that day. Must be unique per route.</description>
    <label>Tuesday Sequence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>