bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Valid_from_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_from_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description
  >Start date of the store-to-route assignment validity period. Together with Valid to Date, defines the active window. Overlapping date ranges for the same store and route are not allowed.</description>
    <inlineHelpText
  >The date this routing assignment becomes effective. Overlapping date ranges for the same store and route are blocked — ensure this does not conflict with existing records.</inlineHelpText>
    <label>Valid from Date</label>
    <type>Date</type>
</CustomField>