bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Valid_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_to_Date__c</fullName>
    <description
  >End date of the store-to-route assignment validity period. If blank, the assignment is open-ended with no expiry. Together with Valid from Date, defines the active window for overlap checks.</description>
    <inlineHelpText
  >The date this routing assignment expires. Leave blank for an open-ended assignment with no end date. Overlapping date ranges for the same store and route are blocked. Must be on or after the Valid from Date.</inlineHelpText>
    <label>Valid to Date</label>
    <type>Date</type>
</CustomField>