bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Visit_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Visit_Plan_ID__c</fullName>
    <label>Visit Plan ID ​</label>
    <length>40</length>
    <type>Text</type>
</CustomField>