bundled_metadata/force-app/main/default/objects/CustomerToRoute__c/fields/Wednesday_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Sequence__c</fullName>
    <description
  >Visit priority/sequence for Wednesday. Entering a value means the store is visited on Wednesday; the number defines the visit order within the route for that day. Must be unique per route.</description>
    <label>Wednesday Sequence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>